@@ -11,22 +11,16 @@ import java.util.concurrent.ConcurrentHashMap;
 
 @Repository
 public class UserRepository {
-    private ConcurrentHashMap<User, List<Authorities>> users = new ConcurrentHashMap<>();
+//    private ConcurrentHashMap<User, List<Authorities>> users = new ConcurrentHashMap<>();
+//
+//    {
+//        users.put(new User("Ben", "qwerty"), Arrays.asList(Authorities.READ, Authorities.WRITE,
+//                Authorities.DELETE));
+//        users.put(new User("Sam", "1234"), List.of(Authorities.READ));
+//        users.put(new User("Dan", "wasd"), Arrays.asList(Authorities.READ, Authorities.DELETE));
+//    }
 
-    {
-        users.put(new User("Ben", "qwerty"), Arrays.asList(Authorities.READ, Authorities.WRITE,
-                Authorities.DELETE));
-        users.put(new User("Sam", "1234"), List.of(Authorities.READ));
-        users.put(new User("Dan", "wasd"), Arrays.asList(Authorities.READ, Authorities.WRITE));
-    }
-
-    public List<Authorities> getUserAuthorities(String user, String password) {
-        User testUser = new User(user, password);
-        for (Map.Entry<User, List<Authorities>> entry : users.entrySet()) {
-            if (testUser.equals(entry.getKey())) {
-                return entry.getValue();
-            }
-        }
-        return null;
+    public List<Authorities> getUserAuthorities() {
+        return Arrays.asList(Authorities.READ, Authorities.WRITE, Authorities.DELETE);
     }
 }
